k8s/deploy/service-mesh/curl-client-cart-yas-dev.yaml
apiVersion: v1
kind: Pod
metadata:
  name: curl-client-cart
  namespace: yas-dev
  labels:
    app: curl-client-cart
  annotations:
    sidecar.istio.io/proxyCPU: 10m
    sidecar.istio.io/proxyMemory: 32Mi
    sidecar.istio.io/proxyCPULimit: 250m
    sidecar.istio.io/proxyMemoryLimit: 256Mi
spec:
  serviceAccountName: cart
  containers:
    - name: curl
      image: curlimages/curl:8.7.1
      command:
        - sh
        - -c
        - sleep 365d
  restartPolicy: Always
