k8s/deploy/service-mesh/curl-client-order.yaml
apiVersion: v1
kind: Pod
metadata:
  name: curl-client-order
  namespace: service-mesh
  labels:
    app: curl-client-order
spec:
  serviceAccountName: order
  containers:
    - name: curl
      image: curlimages/curl:8.7.1
      command:
        - sh
        - -c
        - sleep 365d
  restartPolicy: Always
