k8s/deploy/service-mesh/service-mesh-apps.yaml
apiVersion: v1
kind: Service
metadata:
  name: cart
  namespace: service-mesh
  labels:
    app.kubernetes.io/name: cart
    app.kubernetes.io/instance: cart-sm
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: metric
      port: 8090
      targetPort: metric
  selector:
    app.kubernetes.io/name: cart
    app.kubernetes.io/instance: cart-sm
---
apiVersion: v1
kind: Service
metadata:
  name: customer
  namespace: service-mesh
  labels:
    app.kubernetes.io/name: customer
    app.kubernetes.io/instance: customer-sm
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: metric
      port: 8090
      targetPort: metric
  selector:
    app.kubernetes.io/name: customer
    app.kubernetes.io/instance: customer-sm
---
apiVersion: v1
kind: Service
metadata:
  name: order
  namespace: service-mesh
  labels:
    app.kubernetes.io/name: order
    app.kubernetes.io/instance: order-sm
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: metric
      port: 8090
      targetPort: metric
  selector:
    app.kubernetes.io/name: order
    app.kubernetes.io/instance: order-sm
---
apiVersion: v1
kind: Service
metadata:
  name: product
  namespace: service-mesh
  labels:
    app.kubernetes.io/name: product
    app.kubernetes.io/instance: product-sm
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: metric
      port: 8090
      targetPort: metric
  selector:
    app.kubernetes.io/name: product
    app.kubernetes.io/instance: product-sm
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart
  namespace: service-mesh
  labels:
    app.kubernetes.io/name: cart
    app.kubernetes.io/instance: cart-sm
  annotations:
    reloader.stakater.com/search: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: cart
      app.kubernetes.io/instance: cart-sm
  template:
    metadata:
      annotations:
        sidecar.istio.io/proxyCPU: 1m
      labels:
        app.kubernetes.io/name: cart
        app.kubernetes.io/instance: cart-sm
    spec:
      serviceAccountName: cart
      terminationGracePeriodSeconds: 45
      volumes:
        - name: yas-configuration
          configMap:
            name: yas-configuration-configmap
        - name: cart-application-config
          configMap:
            name: cart-application-configmap
      containers:
        - name: cart
          image: tunas106/yas-cart:latest
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: yas-configuration
              mountPath: /opt/yas/config
            - name: cart-application-config
              mountPath: /opt/yas/cart
          ports:
            - name: http
              containerPort: 80
            - name: metric
              containerPort: 8090
          lifecycle:
            preStop:
              exec:
                command: ["sh", "-c", "sleep 10"]
          livenessProbe:
            initialDelaySeconds: 180
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 12
            httpGet:
              path: /actuator/health/liveness
              port: metric
          readinessProbe:
            initialDelaySeconds: 120
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 12
            httpGet:
              path: /actuator/health/readiness
              port: metric
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer
  namespace: service-mesh
  labels:
    app.kubernetes.io/name: customer
    app.kubernetes.io/instance: customer-sm
  annotations:
    reloader.stakater.com/search: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: customer
      app.kubernetes.io/instance: customer-sm
  template:
    metadata:
      annotations:
        sidecar.istio.io/proxyCPU: 1m
      labels:
        app.kubernetes.io/name: customer
        app.kubernetes.io/instance: customer-sm
    spec:
      serviceAccountName: customer
      terminationGracePeriodSeconds: 45
      volumes:
        - name: yas-configuration
          configMap:
            name: yas-configuration-configmap
        - name: customer-application
          configMap:
            name: customer-application-configmap
      containers:
        - name: customer
          image: tunas106/yas-customer:latest
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: yas-configuration
              mountPath: /opt/yas/config
            - name: customer-application
              mountPath: /opt/yas/customer
          ports:
            - name: http
              containerPort: 80
            - name: metric
              containerPort: 8090
          lifecycle:
            preStop:
              exec:
                command: ["sh", "-c", "sleep 10"]
          livenessProbe:
            initialDelaySeconds: 180
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 12
            httpGet:
              path: /actuator/health/liveness
              port: metric
          readinessProbe:
            initialDelaySeconds: 120
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 12
            httpGet:
              path: /actuator/health/readiness
              port: metric
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order
  namespace: service-mesh
  labels:
    app.kubernetes.io/name: order
    app.kubernetes.io/instance: order-sm
  annotations:
    reloader.stakater.com/search: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: order
      app.kubernetes.io/instance: order-sm
  template:
    metadata:
      annotations:
        sidecar.istio.io/proxyCPU: 1m
      labels:
        app.kubernetes.io/name: order
        app.kubernetes.io/instance: order-sm
    spec:
      serviceAccountName: order
      terminationGracePeriodSeconds: 45
      volumes:
        - name: yas-configuration
          configMap:
            name: yas-configuration-configmap
        - name: order-application-config
          configMap:
            name: order-application-configmap
      containers:
        - name: order
          image: tunas106/yas-order:latest
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: yas-configuration
              mountPath: /opt/yas/config
            - name: order-application-config
              mountPath: /opt/yas/order
          ports:
            - name: http
              containerPort: 80
            - name: metric
              containerPort: 8090
          lifecycle:
            preStop:
              exec:
                command: ["sh", "-c", "sleep 10"]
          livenessProbe:
            initialDelaySeconds: 180
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 12
            httpGet:
              path: /actuator/health/liveness
              port: metric
          readinessProbe:
            initialDelaySeconds: 120
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 12
            httpGet:
              path: /actuator/health/readiness
              port: metric
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product
  namespace: service-mesh
  labels:
    app.kubernetes.io/name: product
    app.kubernetes.io/instance: product-sm
  annotations:
    reloader.stakater.com/search: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: product
      app.kubernetes.io/instance: product-sm
  template:
    metadata:
      annotations:
        sidecar.istio.io/proxyCPU: 1m
      labels:
        app.kubernetes.io/name: product
        app.kubernetes.io/instance: product-sm
    spec:
      serviceAccountName: product
      terminationGracePeriodSeconds: 45
      volumes:
        - name: yas-configuration
          configMap:
            name: yas-configuration-configmap
        - name: product-application-config
          configMap:
            name: product-application-configmap
      containers:
        - name: product
          image: tunas106/yas-product:latest
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: yas-configuration
              mountPath: /opt/yas/config
            - name: product-application-config
              mountPath: /opt/yas/product
          ports:
            - name: http
              containerPort: 80
            - name: metric
              containerPort: 8090
          lifecycle:
            preStop:
              exec:
                command: ["sh", "-c", "sleep 10"]
          livenessProbe:
            initialDelaySeconds: 180
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 12
            httpGet:
              path: /actuator/health/liveness
              port: metric
          readinessProbe:
            initialDelaySeconds: 120
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 12
            httpGet:
              path: /actuator/health/readiness
              port: metric
