k8s/deploy/service-mesh/product-retry-fault-test-yas.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: product-retry
  namespace: yas
spec:
  hosts:
    - product
    - product.yas.svc.cluster.local
  http:
    - match:
        - port: 8090
          uri:
            prefix: /actuator
      route:
        - destination:
            host: product.yas.svc.cluster.local
            port:
              number: 8090
    - match:
        - uri:
            prefix: /product/v3/api-docs
      fault:
        abort:
          httpStatus: 500
          percentage:
            value: 50
      retries:
        attempts: 3
        perTryTimeout: 2s
        retryOn: 5xx,connect-failure,refused-stream,gateway-error,reset
      route:
        - destination:
            host: product.yas.svc.cluster.local
            port:
              number: 80
    - match:
        - uri:
            prefix: /product
      retries:
        attempts: 3
        perTryTimeout: 2s
        retryOn: 5xx,connect-failure,refused-stream,gateway-error,reset
      route:
        - destination:
            host: product.yas.svc.cluster.local
            port:
              number: 80
