k8s/deploy/service-mesh/yas-mesh-core.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: default
  namespace: yas
spec:
  mtls:
    mode: STRICT
---
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: backoffice-bff-mtls
  namespace: yas
spec:
  host: backoffice-bff.yas.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: backoffice-ui-mtls
  namespace: yas
spec:
  host: backoffice-ui.yas.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: cart-mtls
  namespace: yas
spec:
  host: cart.yas.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: customer-mtls
  namespace: yas
spec:
  host: customer.yas.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: inventory-mtls
  namespace: yas
spec:
  host: inventory.yas.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: media-mtls
  namespace: yas
spec:
  host: media.yas.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: order-mtls
  namespace: yas
spec:
  host: order.yas.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: product-mtls
  namespace: yas
spec:
  host: product.yas.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: promotion-mtls
  namespace: yas
spec:
  host: promotion.yas.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: recommendation-mtls
  namespace: yas
spec:
  host: recommendation.yas.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: sampledata-mtls
  namespace: yas
spec:
  host: sampledata.yas.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: storefront-bff-mtls
  namespace: yas
spec:
  host: storefront-bff.yas.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: storefront-ui-mtls
  namespace: yas
spec:
  host: storefront-ui.yas.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: swagger-ui-mtls
  namespace: yas
spec:
  host: swagger-ui.yas.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: webhook-mtls
  namespace: yas
spec:
  host: webhook.yas.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
