k8s/deploy/service-mesh/product-cart-only-authorizationpolicy-yas-dev.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: product-cart-only
  namespace: yas-dev
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: product
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/yas-dev/sa/cart
      to:
        - operation:
            ports:
              - "80"
